# xpropwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: core.cpp  core.h  xpropwatch.cpp
